--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,14 @@
   border-color: transparent transparent #ffffff transparent;
   border-bottom-color: #ff003c;
 }
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
